# mevbot_project

./: .gitignore  README.md  config.json  docker-compose.yml  encode_master_key.py  fernet_generate_key.py  pyproject.toml  requirements.txt  sample.env  service_settings.py  utils.py
abis/Polygon/: quickswap_v3_pool.abi
abis/PolygonZKEVM/: usdt.abi
abis/Tron/: usdc.abi
arbitrage/multi_chain/: bot.py  config.json  constants.py  sample.env
arbitrage/one_chain/: Dockerfile  constants.py  one_chain_bot.py  runservice.py  simple_arbitrage_bot.py
arbitrage_some_chains_bot/: config.py
migrations/: env.py
migrations/versions/: 9fa5db64ec00_add_abis_table.py
source/: abi_storage.py  constants.py  db_driver.py  json_reader.py  logger.py  web3_provider.py
source/db_models/: db_base.py
source/dexes/: dex_class.py  dex_pool.py  pancakeswap.py  quickswap.py  uniswapV2.py
source/dexes/PancakeSwap/: pancakeswap.py
source/dexes/pancakeswap/: pancakeswapV3.py
source/dexes/pancakeswap/v3/: pancakeswapV3.py  pancakeswapV3_pool.py
source/dexes/quickswap/: quickswap.py
source/dexes/quickswap/v3/: quickswapV3.py  quickswapV3_pool.py
source/dexes/uniswap/: uniswapV3.py
source/dexes/uniswap/v3/: uniswapV3.py  uniswapV3_pool.py
