[tool.poetry]
name = "mevbot-project"
version = "0.1.0"
description = ""
authors = ["Danil <70486678+asaWasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.4.2"
cryptography = "^42.0.8"
python-dotenv = "^1.0.1"
colorlog = "^6.8.2"
web3 = "^6.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
